frontend update to 25.04.000.145