@@ -1,6 +1,6 @@
 /*
 
-    Copyright (C) 2022 AGNITAS AG (https://www.agnitas.org)
+    Copyright (C) 2025 AGNITAS AG (https://www.agnitas.org)
 
     This program is free software: you can redistribute it and/or modify it under the terms of the GNU Affero General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
     This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License for more details.
@@ -60,10 +60,10 @@ public class BulkActionValidationServiceImpl<ID, R> implements BulkActionValidat
         List<R> allowedEntries = checks.values().stream()
                 .filter(ServiceResult::isSuccess)
                 .map(ServiceResult::getResult)
-                .collect(Collectors.toList());
+                .toList();
 
         if (allowedEntries.isEmpty()) {
-            return ServiceResult.error(checks.values().stream().flatMap(c -> c.getErrorMessages().stream()).collect(Collectors.toList()));
+            return ServiceResult.error(checks.values().stream().flatMap(c -> c.getErrorMessages().stream()).toList());
         }
 
         if (allowedEntries.size() != ids.size()) {
