@@ -1,6 +1,6 @@
 /*
 
-    Copyright (C) 2022 AGNITAS AG (https://www.agnitas.org)
+    Copyright (C) 2025 AGNITAS AG (https://www.agnitas.org)
 
     This program is free software: you can redistribute it and/or modify it under the terms of the GNU Affero General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
     This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License for more details.
@@ -10,15 +10,14 @@
 
 package com.agnitas.emm.core.objectusage.common;
 
-import com.agnitas.emm.core.objectusage.web.ObjectUsagesToMessages;
-import com.agnitas.messages.Message;
-
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Locale;
-import java.util.stream.Collectors;
+
+import com.agnitas.emm.core.objectusage.web.ObjectUsagesToMessages;
+import com.agnitas.messages.Message;
 
 /**
  * Container for all object usages found.
@@ -56,7 +55,9 @@ public final class ObjectUsages implements Iterable<ObjectUsage> {
 	 * @return list of object usages for given user types
 	 */
 	public List<ObjectUsage> getUsagesByUserType(final ObjectUserType type) {
-		return this.usages.stream().filter(u -> u.getObjectUserType() == type).collect(Collectors.toList());
+		return this.usages.stream()
+				.filter(u -> u.getObjectUserType() == type)
+				.toList();
 	}
 
 	/**
