@@ -1,6 +1,6 @@
 /*
 
-    Copyright (C) 2022 AGNITAS AG (https://www.agnitas.org)
+    Copyright (C) 2025 AGNITAS AG (https://www.agnitas.org)
 
     This program is free software: you can redistribute it and/or modify it under the terms of the GNU Affero General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
     This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License for more details.
@@ -10,32 +10,53 @@
 
 package com.agnitas.emm.core.preview.web;
 
-import static org.agnitas.util.Const.Mvc.ERROR_MSG;
+import static com.agnitas.util.Const.Mvc.ERROR_MSG;
 
 import java.io.File;
-import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.util.Collections;
 import java.util.List;
 import java.util.Vector;
-import java.util.stream.Collectors;
 
+import com.agnitas.beans.Admin;
+import com.agnitas.beans.Mailing;
+import com.agnitas.beans.impl.RecipientLiteImpl;
+import com.agnitas.dao.MailingComponentDao;
+import com.agnitas.dao.MailingDao;
+import com.agnitas.dao.RecipientDao;
 import com.agnitas.emm.core.maildrop.service.MaildropService;
+import com.agnitas.emm.core.mailing.service.MailingBaseService;
+import com.agnitas.emm.core.mailing.service.MailingService;
 import com.agnitas.emm.core.mailinglist.service.MailinglistApprovalService;
-import org.agnitas.beans.Mailinglist;
-import org.agnitas.dao.MailinglistDao;
+import com.agnitas.emm.core.mediatypes.common.MediaTypes;
+import com.agnitas.emm.core.preview.dto.MailingPreviewSettings;
+import com.agnitas.emm.core.preview.dto.PreviewResult;
+import com.agnitas.emm.core.preview.form.PreviewForm;
+import com.agnitas.emm.core.preview.service.MailingWebPreviewService;
+import com.agnitas.emm.core.preview.service.PreviewSettings;
+import com.agnitas.emm.core.recipient.service.RecipientType;
+import com.agnitas.preview.TAGCheckFactory;
+import com.agnitas.service.GridServiceWrapper;
+import com.agnitas.service.PdfService;
+import com.agnitas.service.WebStorage;
+import com.agnitas.web.mvc.DeleteFileAfterSuccessReadResource;
+import com.agnitas.web.mvc.Popups;
+import com.agnitas.web.mvc.XssCheckAware;
+import jakarta.servlet.http.HttpServletResponse;
+import jakarta.servlet.http.HttpSession;
+import com.agnitas.beans.Mailinglist;
+import com.agnitas.emm.core.mailinglist.dao.MailinglistDao;
 import org.agnitas.emm.core.commons.util.ConfigService;
+import org.agnitas.emm.core.commons.util.ConfigValue;
 import org.agnitas.emm.core.mailing.service.MailingModel;
-import org.agnitas.preview.AgnTagException;
-import org.agnitas.preview.ModeType;
-import org.agnitas.preview.Page;
-import org.agnitas.preview.Preview;
-import org.agnitas.preview.PreviewHelper;
-import org.agnitas.preview.TAGCheck;
-import org.agnitas.preview.TAGCheckFactory;
-import org.agnitas.util.HttpUtils;
+import com.agnitas.preview.AgnTagException;
+import com.agnitas.preview.ModeType;
+import com.agnitas.preview.Page;
+import com.agnitas.preview.Preview;
+import com.agnitas.preview.PreviewHelper;
+import com.agnitas.preview.TAGCheck;
+import com.agnitas.util.HttpUtils;
 import org.apache.commons.lang3.StringUtils;
-import org.apache.commons.lang3.math.NumberUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.springframework.core.io.FileSystemResource;
@@ -49,36 +70,14 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.ResponseBody;
 
-import com.agnitas.beans.Admin;
-import com.agnitas.beans.Mailing;
-import com.agnitas.beans.impl.ComRecipientLiteImpl;
-import com.agnitas.dao.MailingDao;
-import com.agnitas.dao.ComRecipientDao;
-import com.agnitas.dao.MailingComponentDao;
-import com.agnitas.emm.core.mailing.service.ComMailingBaseService;
-import com.agnitas.emm.core.mailing.service.MailingService;
-import com.agnitas.emm.core.mediatypes.common.MediaTypes;
-import com.agnitas.emm.core.preview.form.PreviewForm;
-import com.agnitas.emm.core.preview.service.MailingWebPreviewService;
-import com.agnitas.emm.core.recipient.service.RecipientType;
-import com.agnitas.service.GridServiceWrapper;
-import com.agnitas.service.PdfService;
-import com.agnitas.web.mvc.DeleteFileAfterSuccessReadResource;
-import com.agnitas.web.mvc.Popups;
-import com.agnitas.web.mvc.XssCheckAware;
-
-import jakarta.servlet.http.HttpServletRequest;
-import jakarta.servlet.http.HttpServletResponse;
-import jakarta.servlet.http.HttpSession;
-
 public class MailingPreviewController implements XssCheckAware {
 
     private static final Logger LOGGER = LogManager.getLogger(MailingPreviewController.class);
 
-    protected final ComRecipientDao recipientDao;
+    protected final RecipientDao recipientDao;
     private final MailingDao mailingDao;
     private final MailinglistDao mailinglistDao;
-    private final ComMailingBaseService mailingBaseService;
+    private final MailingBaseService mailingBaseService;
     private final MailingService mailingService;
     private final MailingWebPreviewService previewService;
     private final GridServiceWrapper gridService;
@@ -88,11 +87,12 @@ public class MailingPreviewController implements XssCheckAware {
     private final PdfService pdfService;
     private final MaildropService maildropService;
     private final MailinglistApprovalService mailinglistApprovalService;
+    private final WebStorage webStorage;
 
-    public MailingPreviewController(MailingDao mailingDao, MailinglistDao mailinglistDao, ComRecipientDao recipientDao, MailingService mailingService,
+    public MailingPreviewController(MailingDao mailingDao, MailinglistDao mailinglistDao, RecipientDao recipientDao, MailingService mailingService,
                                     MailingWebPreviewService previewService, GridServiceWrapper gridService, MailingComponentDao mailingComponentDao,
-                                    TAGCheckFactory tagCheckFactory, ComMailingBaseService mailingBaseService, ConfigService configService,
-                                    PdfService pdfService, MaildropService maildropService, MailinglistApprovalService mailinglistApprovalService) {
+                                    TAGCheckFactory tagCheckFactory, MailingBaseService mailingBaseService, ConfigService configService,
+                                    PdfService pdfService, MaildropService maildropService, MailinglistApprovalService mailinglistApprovalService, WebStorage webStorage) {
         this.mailingDao = mailingDao;
         this.mailinglistDao = mailinglistDao;
         this.recipientDao = recipientDao;
@@ -106,10 +106,14 @@ public class MailingPreviewController implements XssCheckAware {
         this.pdfService = pdfService;
         this.maildropService = maildropService;
         this.mailinglistApprovalService = mailinglistApprovalService;
+        this.webStorage = webStorage;
     }
 
     @RequestMapping("/{mailingId:\\d+}/view.action")
     public String view(@PathVariable("mailingId") int mailingId, @ModelAttribute("form") PreviewForm form, Admin admin, Model model, Popups popups) {
+        if (!form.isForEmcTextModules()) {
+            syncStoragePreviewSettings(mailingId, form);
+        }
         int companyId = admin.getCompanyID();
         Mailing mailing = mailingDao.getMailing(mailingId, companyId);
 
@@ -119,6 +123,7 @@ public class MailingPreviewController implements XssCheckAware {
         if (admin.isRedesignedUiUsed()) {
             model.addAttribute("isActiveMailing", maildropService.isActiveMailing(mailingId, companyId));
             model.addAttribute("mailinglistDisabled", !mailinglistApprovalService.isAdminHaveAccess(admin, mailing.getMailinglistID()));
+            model.addAttribute("previewSizes", Preview.Size.values());
         } else {
             model.addAttribute("isPostMailing", previewService.isPostMailing(mailing));
             model.addAttribute("limitedRecipientOverview", mailingBaseService.isLimitedRecipientOverview(admin, mailingId));
@@ -130,7 +135,7 @@ public class MailingPreviewController implements XssCheckAware {
         }
 
         previewService.updateActiveMailingPreviewFormat(form, mailingId, companyId);
-        List<ComRecipientLiteImpl> recipientList = recipientDao.getMailingAdminAndTestRecipients(mailingId, companyId);
+        List<RecipientLiteImpl> recipientList = recipientDao.getMailingAdminAndTestRecipients(mailingId, companyId);
         addPreviewRecipientsModelAttrs(model, recipientList, form.getPersonalizedTestRunRecipients(), admin);
 
         if ((form.getModeType() == ModeType.RECIPIENT || form.getModeType() == ModeType.MANUAL) && mailingDao.hasPreviewRecipients(mailingId, companyId)) {
@@ -147,14 +152,39 @@ public class MailingPreviewController implements XssCheckAware {
         return "mailing_preview_select";
     }
 
-    protected void addPreviewRecipientsModelAttrs(Model model, List<ComRecipientLiteImpl> recipientList, List<String> personalizedTestRunRecipients, Admin admin) {
+    private void syncStoragePreviewSettings(int mailingId, PreviewForm form) {
+        webStorage.access(WebStorage.MAILING_PREVIEW, entry -> {
+            MailingPreviewSettings settings = entry.getSettings(mailingId);
+            if (form.isReload()) {
+                settings.setFormat(form.getFormat());
+                settings.setSize(form.getSize());
+                settings.setModeType(form.getModeType());
+                settings.setCustomerEmail(form.getCustomerEmail());
+                settings.setNoImages(form.isNoImages());
+                settings.setTargetId(form.getTargetGroupId());
+            } else {
+                form.setFormat(settings.getFormat());
+                form.setSize(settings.getSize());
+                form.setModeType(settings.getModeType());
+                form.setCustomerEmail(settings.getCustomerEmail());
+                form.setTargetGroupId(settings.getTargetId());
+                form.setNoImages(settings.isNoImages());
+            }
+        });
+    }
+
+    protected void addPreviewRecipientsModelAttrs(Model model, List<RecipientLiteImpl> recipientList, List<String> personalizedTestRunRecipients, Admin admin) {
         model.addAttribute("previewRecipients", recipientList);
     }
 
     @GetMapping("/view-content.action")
-    public String viewContent(@ModelAttribute("form") PreviewForm form, Model model, Admin admin, HttpServletRequest req, Popups popups) {
+    public String viewContent(@ModelAttribute("form") PreviewForm form, Model model, Admin admin, Popups popups) {
         try {
-            return previewService.getPreview(form, getBulkCompanyId(req), admin);
+            final PreviewSettings settings = formToSettingsBuilder(form).build();
+            final PreviewResult previewResult = previewService.getPreview(settings, admin.getCompanyID(), admin);
+            form.setPreviewContent(previewResult.getPreviewContent().orElse(""));
+
+            return String.format("preview.%d", previewResult.getPreviewFormat()) ;
         } catch (AgnTagException agnTagException) {
             model.addAttribute("errorReport", agnTagException.getReport());
             popups.alert("error.template.dyntags");
@@ -178,16 +208,17 @@ public class MailingPreviewController implements XssCheckAware {
     }
 
     private ResponseEntity<byte[]> tryGetMailingHtml(PreviewForm previewForm, Admin admin) throws Exception {
-        previewForm.setAnon(true);
-        previewForm.setOnAnonPreserveLinks(true);
+        final PreviewSettings settings = formToSettingsBuilder(previewForm)
+                .withAnonymous(true, true)
+                .build();
 
-        previewService.getPreview(previewForm, admin.getCompanyID(), admin);
+        final PreviewResult previewResult = previewService.getPreview(settings, admin.getCompanyID(), admin);
 
         return ResponseEntity.ok()
                 .contentType(MediaType.parseMediaType("text/html"))
                 .header(HttpHeaders.CONTENT_DISPOSITION, HttpUtils.getContentDispositionAttachment(
                         getHtmlDownloadFileName(previewForm.getMailingId(), admin.getCompanyID()), StandardCharsets.UTF_8.name()))
-                .body(previewForm.getPreviewContent().getBytes(StandardCharsets.UTF_8));
+                .body(previewResult.getPreviewContent().orElse("").getBytes(StandardCharsets.UTF_8));
     }
 
     private String getHtmlDownloadFileName(int mailingId, int companyId) {
@@ -197,18 +228,38 @@ public class MailingPreviewController implements XssCheckAware {
 
     @GetMapping(value = "/pdf.action", produces = MediaType.APPLICATION_OCTET_STREAM_VALUE)
     public @ResponseBody
-    FileSystemResource saveAsPdf(@ModelAttribute PreviewForm form, Admin admin, HttpSession session, HttpServletResponse response) throws IOException {
-        final String baseUrl = configService.getPreviewBaseUrl();
+    FileSystemResource saveAsPdf(@ModelAttribute PreviewForm form, Admin admin, HttpSession session, HttpServletResponse response) throws Exception {
+        if(configService.getBooleanValue(ConfigValue.Development.UseLocalPreview, admin.getCompanyID())) {
+            final PreviewSettings previewSettings = PreviewSettings.builder()
+                    .withMailingId(form.getMailingId())
+                    .withPreviewFormat(form.getFormat())
+                    .withPreviewSize(Preview.Size.getSizeById(form.getSize()))
+                    .withMode(ModeType.getByCode(form.getModeTypeId()))
+                    .withTargetGroupId(form.getTargetGroupId())
+                    .withCustomerId(form.getCustomerID())
+                    .withNoImages(form.isNoImages())
+                    .withRdirDomain(configService.getPreviewBaseUrl())
+                    .build();
 
-        final String url = String.format("%s/mailing/preview/view-content.action;jsessionid=%s?mailingId=%d&format=%d&size=%d&modeTypeId=%d&targetGroupId=%d&customerID=%d&noImages=%s",
-                baseUrl, session.getId(), form.getMailingId(), form.getFormat(), form.getSize(), form.getModeTypeId(), form.getTargetGroupId(), form.getCustomerID(), form.isNoImages());
+            final String mailingName = mailingDao.getMailingName(form.getMailingId(), admin.getCompanyID());
 
-        String mailingName = mailingDao.getMailingName(form.getMailingId(), admin.getCompanyID());
+            final File pdfFile = pdfService.generatePDF(admin, previewSettings, false, mailingName, "Mailing");
 
-        File pdfFile = pdfService.generatePDF(admin, url, false, mailingName, "Mailing");
+            HttpUtils.setDownloadFilenameHeader(response, mailingName + ".pdf");
+            return new DeleteFileAfterSuccessReadResource(pdfFile);
+        } else {
+            final String baseUrl = configService.getPreviewBaseUrl();
+            final String url = String.format("%s/mailing/preview/view-content.action;jsessionid=%s?mailingId=%d&format=%d&size=%d&modeTypeId=%d&targetGroupId=%d&customerID=%d&noImages=%s&internal=true",
+                    baseUrl, session.getId(), form.getMailingId(), form.getFormat(), form.getSize(), form.getModeTypeId(), form.getTargetGroupId(), form.getCustomerID(), form.isNoImages());
 
-        HttpUtils.setDownloadFilenameHeader(response, mailingName + ".pdf");
-        return new DeleteFileAfterSuccessReadResource(pdfFile);
+            final String mailingName = mailingDao.getMailingName(form.getMailingId(), admin.getCompanyID());
+
+            final File pdfFile = pdfService.generatePDF(admin, url, false, mailingName, "Mailing");
+
+            HttpUtils.setDownloadFilenameHeader(response, mailingName + ".pdf");
+            return new DeleteFileAfterSuccessReadResource(pdfFile);
+        }
+
     }
 
     private void initFormData(int mailingId, PreviewForm form, Mailing mailing, int companyId) {
@@ -222,8 +273,8 @@ public class MailingPreviewController implements XssCheckAware {
         form.setTemplate(mailing.isIsTemplate());
         form.setMailingUndoAvailable(mailingBaseService.checkUndoAvailable(mailingId));
         form.setWorkflowId(workflowId);
-        form.setMediaQuery(previewService.getMediaQuery(Preview.Size.getSizeById(form.getSize())));
-        form.setWidth(previewService.getPreviewWidth(Preview.Size.getSizeById(form.getSize())));
+        form.setMediaQuery(Boolean.toString(Preview.Size.getSizeById(form.getSize()).isMediaQuery()));
+        form.setWidth(Preview.Size.getSizeById(form.getSize()).getCssWidth());
 
         if (mailing.getEmailParam() == null || mailing.getEmailParam().getMailFormat() == MailingModel.Format.TEXT.getCode()) {
             form.setEmailFormat(MediaTypes.EMAIL.getMediaCode());
@@ -231,15 +282,9 @@ public class MailingPreviewController implements XssCheckAware {
         } else {
             form.setEmailFormat(mailing.getEmailParam().getMailFormat());
         }
-    }
-
-    private int getBulkCompanyId(HttpServletRequest req) {
-        if (req.getSession().getAttribute("bulkGenerate") != null) {
-            String companyIdString = req.getParameter("previewCompanyId");
-            return NumberUtils.toInt(companyIdString, -1);
+        if (form.isForEmcTextModules()) {
+            form.setFormat(MailingWebPreviewService.INPUT_TYPE_TEXT);
         }
-
-        return -1;
     }
 
     private void loadPreviewHeaderData(Mailing mailing, PreviewForm form, Admin admin, Model model, Popups popups) {
@@ -304,7 +349,7 @@ public class MailingPreviewController implements XssCheckAware {
         }
     }
 
-    private void choosePreviewCustomerId(int companyId, int mailingId, PreviewForm previewForm, boolean useCustomerEmail, Popups popups, List<ComRecipientLiteImpl> recipientList) {
+    private void choosePreviewCustomerId(int companyId, int mailingId, PreviewForm previewForm, boolean useCustomerEmail, Popups popups, List<RecipientLiteImpl> recipientList) {
         String previewCustomerEmail = previewForm.getCustomerEmail();
 
         if (useCustomerEmail && StringUtils.isNotBlank(previewCustomerEmail)) {
@@ -326,12 +371,31 @@ public class MailingPreviewController implements XssCheckAware {
         setMinCustomerId(previewForm, recipientList);
     }
 
-    private void setMinCustomerId(PreviewForm previewForm, List<ComRecipientLiteImpl> recipients) {
+    private void setMinCustomerId(PreviewForm previewForm, List<RecipientLiteImpl> recipients) {
         if (recipients == null || recipients.isEmpty()) {
             return;
         }
-        int minId = Collections.min(recipients.stream().map(ComRecipientLiteImpl::getId).collect(Collectors.toList()));
+        int minId = Collections.min(recipients.stream().map(RecipientLiteImpl::getId).toList());
         previewForm.setCustomerID(minId);
         previewForm.setCustomerATID(minId);
+    }
+
+    private PreviewSettings.PreviewSettingsBuilder formToSettingsBuilder(PreviewForm form) {
+        final PreviewSettings.PreviewSettingsBuilder settings = PreviewSettings.builder();
+
+        settings.withPreviewSize(Preview.Size.getSizeById(form.getSize()));
+        settings.withMailingId(form.getMailingId());
+        settings.withAnonymous(form.isAnon(), form.isOnAnonPreserveLinks());
+        settings.withPreviewFormat(form.getFormat());
+        settings.withMode(form.getModeType());
+        settings.withCustomerId(form.getCustomerID());
+        settings.withNoImages(form.isNoImages());
+        settings.withTargetGroupId(form.getTargetGroupId());
+
+        if (form.isInternal()) {
+            settings.withRdirDomain(configService.getPreviewBaseUrl());
+        }
+
+        return settings;
     }
 }
