@@ -1,6 +1,6 @@
 /*
 
-    Copyright (C) 2022 AGNITAS AG (https://www.agnitas.org)
+    Copyright (C) 2025 AGNITAS AG (https://www.agnitas.org)
 
     This program is free software: you can redistribute it and/or modify it under the terms of the GNU Affero General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
     This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License for more details.
@@ -10,40 +10,36 @@
 
 package com.agnitas.reporting.birt.external.dataset;
 
-import com.agnitas.dao.DaoUpdateReturnValueCheck;
-import com.agnitas.emm.common.MailingType;
-import com.agnitas.emm.core.mobile.bean.DeviceClass;
-import com.agnitas.emm.core.workflow.beans.WorkflowIcon;
-import com.agnitas.emm.core.workflow.beans.WorkflowIconType;
-import com.agnitas.emm.core.workflow.service.ComWorkflowDataParser;
-import com.agnitas.emm.core.workflow.service.util.WorkflowUtils;
-import com.agnitas.reporting.birt.external.beans.LightMailing;
-import com.agnitas.reporting.birt.external.beans.LightTarget;
-import com.agnitas.reporting.birt.external.dao.impl.LightMailingDaoImpl;
-import org.agnitas.dao.impl.mapper.StringRowMapper;
-import org.agnitas.util.DbUtilities;
-import org.apache.commons.collections4.CollectionUtils;
-import org.apache.commons.lang3.StringUtils;
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
-import org.springframework.dao.EmptyResultDataAccessException;
+import static com.agnitas.reporting.birt.external.dataset.CommonKeys.ALL_SUBSCRIBERS_TARGETGROUPID;
+import static com.agnitas.reporting.birt.external.dataset.CommonKeys.CLICKER_TRACKED_INDEX;
 
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 
-import static com.agnitas.reporting.birt.external.dataset.CommonKeys.ALL_SUBSCRIBERS_TARGETGROUPID;
-import static com.agnitas.reporting.birt.external.dataset.CommonKeys.CLICKER_TRACKED_INDEX;
+import com.agnitas.dao.DaoUpdateReturnValueCheck;
+import com.agnitas.emm.common.MailingType;
+import com.agnitas.emm.core.mobile.bean.DeviceClass;
+import com.agnitas.emm.core.workflow.beans.WorkflowIcon;
+import com.agnitas.emm.core.workflow.beans.WorkflowIconType;
+import com.agnitas.emm.core.workflow.service.WorkflowDataParser;
+import com.agnitas.emm.core.workflow.service.util.WorkflowUtils;
+import com.agnitas.reporting.birt.external.beans.LightMailing;
+import com.agnitas.reporting.birt.external.beans.LightTarget;
+import com.agnitas.reporting.birt.external.dao.impl.LightMailingDaoImpl;
+import com.agnitas.dao.impl.mapper.StringRowMapper;
+import com.agnitas.util.DbUtilities;
+import org.apache.commons.collections4.CollectionUtils;
+import org.apache.commons.lang3.StringUtils;
+import org.springframework.dao.EmptyResultDataAccessException;
 
 public class WorkflowDataSet extends TotalOptimizationDataSet {
 
-    private static final Logger logger = LogManager.getLogger(WorkflowDataSet.class);
     private static final Set<Integer> MAILING_ICONS_IDS = Set.of(
             WorkflowIconType.Constants.MAILING_ID,
             WorkflowIconType.Constants.FOLLOWUP_MAILING_ID,
@@ -51,21 +47,21 @@ public class WorkflowDataSet extends TotalOptimizationDataSet {
             WorkflowIconType.Constants.DATE_BASED_MAILING_ID
     );
 
-    private final ComWorkflowDataParser workflowDataParser;
+    private final WorkflowDataParser workflowDataParser;
 
     private int mailingTempTableId;
     private int summaryTempTableId;
 
-    public WorkflowDataSet(ComWorkflowDataParser workflowDataParser) {
+    public WorkflowDataSet(WorkflowDataParser workflowDataParser) {
         this.workflowDataParser = workflowDataParser;
     }
 
     /**
      * This method has to be called in initialize function of the report, otherwise getWorkflowMailings will fail!
      */
-    public void prepareWorkflowReport(int workflowId, int companyId, Boolean showSoftbounces) throws Exception {
+    public void prepareWorkflowReport(int workflowId, int companyId, Boolean showSoftbounces, String startDate, String endDate) throws Exception {
         this.mailingTempTableId = prepareWorkflowMailingsData(workflowId, companyId);
-        this.summaryTempTableId = prepareTotalWorkflowSummaryData(companyId, showSoftbounces);
+        this.summaryTempTableId = prepareTotalWorkflowSummaryData(companyId, showSoftbounces, startDate, endDate);
     }
 
     private int prepareWorkflowMailingsData(int workflowId, int companyId) throws Exception {
@@ -84,7 +80,7 @@ public class WorkflowDataSet extends TotalOptimizationDataSet {
         return tempTableID;
     }
 
-    private int prepareTotalWorkflowSummaryData(int companyID, Boolean showSoftbounces) throws Exception {
+    private int prepareTotalWorkflowSummaryData(int companyID, Boolean showSoftbounces, String startDate, String endDate) throws Exception {
         int tempSummaryTableID = createSummaryTempTable();
         List<WorkflowMailingData> workflowMailingsData = getWorkflowMailings();
 
@@ -95,18 +91,18 @@ public class WorkflowDataSet extends TotalOptimizationDataSet {
         String targetSQL = allocateTargetSQL(workflowMailingsData, companyID);
         List<Integer> mailingIds = new ArrayList<>();
         for (WorkflowMailingData data : workflowMailingsData) {
-            insertSendIntoTempTable(tempSummaryTableID, data, companyID, targetSQL);
-            insertClickersIntoTempTable(tempSummaryTableID, data, companyID, targetSQL, CommonKeys.TYPE_ALL_SUBSCRIBERS);
-            insertClicksAnonymousIntoTempTable(tempSummaryTableID, data, companyID);
-            insertOpenersIntoTempTable(tempSummaryTableID, data, companyID, targetSQL);
-            insertOpenedInvisibleIntoTempTable(tempSummaryTableID, data, companyID, targetSQL);
-            insertOpenedGrossIntoTempTable(tempSummaryTableID, data, companyID, targetSQL);
-            insertOpenedAnonymousIntoTempTable(tempSummaryTableID, data, companyID);
-            insertBouncesIntoTempTable(tempSummaryTableID, data, companyID, targetSQL);
-            insertSoftbouncesUndeliverable(tempSummaryTableID, data, companyID, showSoftbounces);
-            insertOptOutsIntoTempTable(tempSummaryTableID, data, companyID, targetSQL);
-            insertRevenueIntoTempTable(tempSummaryTableID, data, companyID, targetSQL);
-            insertDeliveredIntoTempTable(tempSummaryTableID, data, companyID, targetSQL);
+            insertSendIntoTempTable(tempSummaryTableID, data, companyID, targetSQL, startDate, endDate);
+            insertClickersIntoTempTable(tempSummaryTableID, data, companyID, targetSQL, CommonKeys.TYPE_ALL_SUBSCRIBERS, startDate, endDate);
+            insertClicksAnonymousIntoTempTable(tempSummaryTableID, data, companyID, startDate, endDate);
+            insertOpenersIntoTempTable(tempSummaryTableID, data, companyID, targetSQL, startDate, endDate);
+            insertOpenedInvisibleIntoTempTable(tempSummaryTableID, data, companyID, targetSQL, startDate, endDate);
+            insertOpenedGrossIntoTempTable(tempSummaryTableID, data, companyID, targetSQL, startDate, endDate);
+            insertOpenedAnonymousIntoTempTable(tempSummaryTableID, data, companyID, startDate, endDate);
+            insertBouncesIntoTempTable(tempSummaryTableID, data, companyID, targetSQL, startDate, endDate);
+            insertSoftbouncesUndeliverable(tempSummaryTableID, data, companyID, showSoftbounces, startDate, endDate);
+            insertOptOutsIntoTempTable(tempSummaryTableID, data, companyID, targetSQL, startDate, endDate);
+            insertRevenueIntoTempTable(tempSummaryTableID, data, companyID, targetSQL, startDate, endDate);
+            insertDeliveredIntoTempTable(tempSummaryTableID, data, companyID, targetSQL, startDate, endDate);
             mailingIds.add(data.getMailingId());
         }
 
@@ -117,20 +113,29 @@ public class WorkflowDataSet extends TotalOptimizationDataSet {
     }
 
     public String getMailingNameBySortOrder(int order) throws Exception {
-        String sql = "SELECT mailing_name FROM tmp_report_aggregation_" + mailingTempTableId + "_tbl WHERE sort_order = ?";
-        return selectEmbedded(logger, sql, String.class, order);
+        return selectEmbedded(
+                "SELECT mailing_name FROM %s WHERE sort_order = ?".formatted(getTemporaryTableName(mailingTempTableId)),
+                String.class,
+                order
+        );
     }
 
+    @SuppressWarnings("unused") // used by workflow.rptdesign
     public Integer getSortOrderByMailingName(String name) throws Exception {
-        String sql = "SELECT sort_order FROM tmp_report_aggregation_" + mailingTempTableId + "_tbl WHERE mailing_name = ?";
-        return selectEmbedded(logger, sql, Integer.class, name);
+        return selectEmbedded(
+                "SELECT sort_order FROM %s WHERE mailing_name = ?".formatted(getTemporaryTableName(mailingTempTableId)),
+                Integer.class,
+                name
+        );
     }
 
     public List<WorkflowMailingData> getWorkflowMailings() throws Exception {
-        String sql = "SELECT mailing_id, mailing_name, mailing_subject, sort_order, " +
-                "target_group_id, target_group_name, avg_mailing_size" +
-                " FROM tmp_report_aggregation_" + mailingTempTableId + "_tbl ORDER BY mailing_id";
-        return selectEmbedded(logger, sql, (resultSet, i) -> {
+        String sql = """
+                SELECT mailing_id, mailing_name, mailing_subject, sort_order, target_group_id, target_group_name, avg_mailing_size
+                FROM %s ORDER BY mailing_id
+                """.formatted(getTemporaryTableName(mailingTempTableId));
+
+        return selectEmbedded(sql, (resultSet, i) -> {
             WorkflowMailingData data = new WorkflowMailingData();
             data.setMailingId(resultSet.getInt("mailing_id"));
             data.setMailingName(resultSet.getString("mailing_name"));
@@ -145,15 +150,16 @@ public class WorkflowDataSet extends TotalOptimizationDataSet {
     }
 
     public List<WorkflowMailingSummaryRow> getTotalWorkflowSummaryData() throws Exception {
-        String query = "SELECT " +
-                "st.category, st.category_index, st.mailing_id, st.value, st.rate, st.rate_delivered, mt.mailing_name, " +
-                "COALESCE(st.sort_order, mt.sort_order) AS sort_order, " +
-                "mt.target_group_id, mt.target_group_name " +
-                "FROM tmp_report_aggregation_" + summaryTempTableId + "_tbl st " +
-                "LEFT JOIN tmp_report_aggregation_" + mailingTempTableId + "_tbl mt ON mt.mailing_id = st.mailing_id AND mt.sort_order = st.sort_order " +
-                "ORDER BY st.category_index, st.mailing_id";
+        String query = """
+                SELECT st.category, st.category_index, st.mailing_id, st.value, st.rate, st.rate_delivered,
+                       mt.mailing_name, COALESCE(st.sort_order, mt.sort_order) AS sort_order, mt.target_group_id,
+                       mt.target_group_name
+                FROM %s st LEFT JOIN %s mt
+                ON mt.mailing_id = st.mailing_id AND mt.sort_order = st.sort_order
+                ORDER BY st.category_index, st.mailing_id
+                """.formatted(getTemporaryTableName(summaryTempTableId), getTemporaryTableName(mailingTempTableId));
 
-        return selectEmbedded(logger, query, (resultSet, rowNum) -> {
+        return selectEmbedded(query, (resultSet, rowNum) -> {
             WorkflowMailingSummaryRow row = new WorkflowMailingSummaryRow();
             row.setCategory(resultSet.getString("category"));
             row.setCategoryindex(resultSet.getInt("category_index"));
@@ -181,19 +187,17 @@ public class WorkflowDataSet extends TotalOptimizationDataSet {
             mailingsOrder.put(mailings.get(i), i);
         }
 
-        String query = String.format("SELECT res.mid, " +
-                "       res.name, " +
-                "       res.mt_param " +
-                "FROM (SELECT m.mailing_id      AS mid, " +
-                "             MAX(m.shortname)  AS name, " +
-                "             mt.param          AS mt_param " +
-                "      FROM mailing_tbl m " +
-                "               LEFT JOIN mailing_mt_tbl mt ON m.mailing_id = mt.mailing_id AND mediatype = 0 " +
-                "      WHERE m.mailing_id IN (%s) " +
-                "        AND m.company_id = ? " +
-                "      GROUP BY m.mailing_id, mt.param) res", StringUtils.join(mailings, ", "));
+        String query = """
+                SELECT res.mid, res.name, res.mt_param
+                FROM (SELECT m.mailing_id AS mid, MAX(m.shortname) AS name, mt.param AS mt_param
+                      FROM mailing_tbl m
+                               LEFT JOIN mailing_mt_tbl mt ON m.mailing_id = mt.mailing_id AND mediatype = 0
+                      WHERE m.mailing_id IN (%s)
+                        AND m.company_id = ?
+                      GROUP BY m.mailing_id, mt.param) res
+                """.formatted(joinIds(mailings));
 
-        return select(logger, query, (resultSet, i) -> {
+        return select(query, (resultSet, i) -> {
             WorkflowMailingData data = new WorkflowMailingData();
             data.setMailingId(resultSet.getInt("mid"));
             data.setMailingName(resultSet.getString("name"));
@@ -208,7 +212,7 @@ public class WorkflowDataSet extends TotalOptimizationDataSet {
 
     private List<Integer> getWorkflowMailingsIds(int workflowId, int companyId) {
         String sqlGetSchema = "SELECT workflow_schema FROM workflow_tbl WHERE workflow_id = ? AND company_id = ?";
-        String schema = selectObjectDefaultNull(logger, sqlGetSchema, StringRowMapper.INSTANCE, workflowId, companyId);
+        String schema = selectObjectDefaultNull(sqlGetSchema, StringRowMapper.INSTANCE, workflowId, companyId);
 
         if (StringUtils.isBlank(schema)) {
             return Collections.emptyList();
@@ -226,11 +230,10 @@ public class WorkflowDataSet extends TotalOptimizationDataSet {
      */
     private List<Integer> collectMailingIds(List<WorkflowIcon> icons) {
         return icons.stream()
-                .filter(i -> MAILING_ICONS_IDS.contains(i.getType()))
-                .filter(i -> WorkflowUtils.getMailingId(i) > 0 && i.isFilled())
+                .filter(i -> MAILING_ICONS_IDS.contains(i.getType()) && WorkflowUtils.getMailingId(i) > 0 && i.isFilled())
                 .sorted(Comparator.comparingInt(WorkflowIcon::getId))
                 .map(WorkflowUtils::getMailingId)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @DaoUpdateReturnValueCheck
@@ -241,129 +244,104 @@ public class WorkflowDataSet extends TotalOptimizationDataSet {
             categoryIndexes.add(i);
         }
 
-        updateRatesByCategories(tempTableID, Collections.singletonList(CommonKeys.DELIVERED_EMAILS_INDEX), mailingIds, categoryIndexes);
-        updateDeliveredRatesByCategories(tempTableID, Collections.singletonList(CommonKeys.DELIVERED_EMAILS_DELIVERED_INDEX), mailingIds, categoryIndexes);
+        updateRatesByCategories(tempTableID, List.of(CommonKeys.DELIVERED_EMAILS_INDEX), mailingIds, categoryIndexes);
+        updateDeliveredRatesByCategories(tempTableID, List.of(CommonKeys.DELIVERED_EMAILS_DELIVERED_INDEX), mailingIds, categoryIndexes);
 
-        // mobile/PC clicks
-        List<Integer> clickerIndexes = Arrays.asList(CommonKeys.CLICKER_PC_INDEX,
-                CommonKeys.CLICKER_MOBILE_INDEX,
-                CommonKeys.CLICKER_TABLET_INDEX,
-                CommonKeys.CLICKER_SMARTTV_INDEX,
-                CommonKeys.CLICKER_PC_AND_MOBILE_INDEX,
-                CommonKeys.CLICKS_ANONYMOUS_INDEX
-        );
-        updateRatesByCategories(tempTableID, Collections.singletonList(CommonKeys.CLICKER_TRACKED_INDEX), mailingIds, clickerIndexes);
+        updateRatesByCategories(tempTableID, List.of(CommonKeys.CLICKER_TRACKED_INDEX), mailingIds, CLICKER_INDEXES);
+        updateRatesByCategories(tempTableID, List.of(CommonKeys.OPENERS_TRACKED_INDEX), mailingIds, OPENING_INDEXES);
 
-        // mobile/PC openings
-        List<Integer> openingIndexes = Arrays.asList(
-                CommonKeys.OPENERS_PC_INDEX,
-                CommonKeys.OPENERS_TABLET_INDEX,
-                CommonKeys.OPENERS_MOBILE_INDEX,
-                CommonKeys.OPENERS_SMARTTV_INDEX,
-                CommonKeys.OPENERS_PC_AND_MOBILE_INDEX,
-                CommonKeys.OPENINGS_ANONYMOUS_INDEX
-        );
-        updateRatesByCategories(tempTableID, Collections.singletonList(CommonKeys.OPENERS_TRACKED_INDEX), mailingIds, openingIndexes);
-
-        Integer[] measuredCategories = {
-                CommonKeys.CLICKER_TRACKED_INDEX,
-                CommonKeys.OPENERS_TRACKED_INDEX
-        };
-
-        String sqlUpdateMeasuredCategories = "UPDATE " +
-                "tmp_report_aggregation_" + tempTableID + "_tbl" +
-                " SET rate = 1 WHERE mailing_id IN (" +
-                StringUtils.join(mailingIds, ", ") +
-                ") AND category_index IN (" +
-                StringUtils.join(measuredCategories, ", ") +
-                ")";
-
-        updateEmbedded(logger, sqlUpdateMeasuredCategories);
+        updateEmbedded("UPDATE %s SET rate = 1 WHERE mailing_id IN (%s) AND category_index IN (%s)"
+                .formatted(
+                        getTemporaryTableName(tempTableID),
+                        joinIds(mailingIds),
+                        joinIds(CommonKeys.CLICKER_TRACKED_INDEX, CommonKeys.OPENERS_TRACKED_INDEX)
+                ));
 
         // Gross openings / gross clicks
-        updateEmbedded(logger, getUpdateResponseRateQuery(tempTableID), CommonKeys.ACTIVITY_RATE, CommonKeys.ACTIVITY_RATE_INDEX);
+        updateEmbedded(getUpdateResponseRateQuery(tempTableID), CommonKeys.ACTIVITY_RATE, CommonKeys.ACTIVITY_RATE_INDEX);
     }
 
     private String getUpdateResponseRateQuery(int tempTableID) {
-        return "INSERT INTO tmp_report_aggregation_" + tempTableID + "_tbl"
-                + " (category, category_index, mailing_id, sort_order, rate)"
-                + " SELECT ?, ?, a.mailing_id, a.sort_order, CASE WHEN (b.value = 0) THEN 0 ELSE CAST(a.value AS DOUBLE)/b.value END"
-                + " FROM tmp_report_aggregation_" + tempTableID + "_tbl a INNER JOIN tmp_report_aggregation_" + tempTableID + "_tbl b"
-                + " ON a.category_index = " + CommonKeys.CLICKS_GROSS_INDEX +
-                " AND b.category_index = " + CommonKeys.OPENINGS_GROSS_MEASURED_INDEX + " AND a.mailing_id = b.mailing_id AND a.sort_order = b.sort_order";
+        String tableName = getTemporaryTableName(tempTableID);
+        return """
+                INSERT INTO %s (category, category_index, mailing_id, sort_order, rate)
+                SELECT ?, ?, a.mailing_id, a.sort_order, CASE WHEN (b.value = 0) THEN 0 ELSE CAST(a.value AS DOUBLE) / b.value END
+                FROM %s a INNER JOIN %s b
+                ON a.category_index = %d AND b.category_index = %d AND a.mailing_id = b.mailing_id AND a.sort_order = b.sort_order
+                """.formatted(tableName, tableName, tableName, CommonKeys.CLICKS_GROSS_INDEX, CommonKeys.OPENINGS_GROSS_MEASURED_INDEX);
     }
 
     private void updateRatesByCategories(int tempTableID, List<Integer> allCategoryIndex, List<Integer> mailingIds, List<Integer> categoryIndex) throws Exception {
-        StringBuilder totalCountQuery = new StringBuilder();
-        totalCountQuery
-                .append("SELECT a.mailing_id, CASE WHEN (SUM(a.value) IS NULL OR SUM(a.value) < 0) THEN -1 ELSE SUM(a.value) END AS total")
-                .append(" FROM ").append("tmp_report_aggregation_").append(tempTableID).append("_tbl").append(" a")
-                .append(" WHERE a.mailing_id IN (").append(StringUtils.join(mailingIds, ", ")).append(")")
-                .append(" AND a.category_index IN (").append(StringUtils.join(allCategoryIndex, ", ")).append(")")
-                .append(" GROUP BY a.mailing_id");
+        String tableName = getTemporaryTableName(tempTableID);
 
-        StringBuilder updateRateQuery = new StringBuilder();
-        updateRateQuery
-                .append("UPDATE ").append("tmp_report_aggregation_").append(tempTableID).append("_tbl").append(" t")
-                .append(" SET t.rate = (CASE WHEN (? <= 0) THEN -1 ELSE 1.0 * t.value / ? END)")
-                .append(" WHERE t.mailing_id = ? AND t.category_index IN (").append(StringUtils.join(categoryIndex, ", ")).append(")");
+        String totalCountQuery = """
+                SELECT a.mailing_id, CASE WHEN (SUM(a.value) IS NULL OR SUM(a.value) < 0) THEN -1 ELSE SUM(a.value) END AS total
+                FROM %s a
+                WHERE a.mailing_id IN (%s) AND a.category_index IN (%s)
+                GROUP BY a.mailing_id
+                """.formatted(tableName, joinIds(mailingIds), joinIds(allCategoryIndex));
 
-        for (Map<String, Object> row : selectEmbedded(logger, totalCountQuery.toString())) {
-            updateEmbedded(logger, updateRateQuery.toString(), ((Number) row.get("total")).intValue(), ((Number) row.get("total")).intValue(), ((Number) row.get("mailing_id")).intValue());
+        String updateRateQuery = """
+                UPDATE %s t
+                SET t.rate = (CASE WHEN (? <= 0) THEN -1 ELSE 1.0 * t.value / ? END)
+                WHERE t.mailing_id = ? AND t.category_index IN (%s)
+                """.formatted(tableName, joinIds(categoryIndex));
+
+        for (Map<String, Object> row : selectEmbedded(totalCountQuery)) {
+            updateEmbedded(
+                    updateRateQuery,
+                    toInt(row.get("total")),
+                    toInt(row.get("total")),
+                    toInt(row.get("mailing_id"))
+            );
         }
     }
 
     private void updateDeliveredRatesByCategories(int tempTableID, List<Integer> allCategoryIndex, List<Integer> mailingIds, List<Integer> categoryIndex) throws Exception {
-        StringBuilder totalCountQuery = new StringBuilder();
-        totalCountQuery
-                .append("SELECT a.mailing_id, CASE WHEN (SUM(a.value) IS NULL OR SUM(a.value) = 0) THEN -1 ELSE SUM(a.value) END AS total")
-                .append(" FROM ").append("tmp_report_aggregation_").append(tempTableID).append("_tbl").append(" a")
-                .append(" WHERE a.mailing_id IN (").append(StringUtils.join(mailingIds, ", ")).append(")")
-                .append(" AND a.category_index IN (").append(StringUtils.join(allCategoryIndex, ", ")).append(")")
-                .append(" GROUP BY a.mailing_id");
+        String tableName = getTemporaryTableName(tempTableID);
 
-        StringBuilder updateRateQuery = new StringBuilder();
-        updateRateQuery
-                .append("UPDATE ").append("tmp_report_aggregation_").append(tempTableID).append("_tbl t")
-                .append(" SET t.rate_delivered = (CASE WHEN t.category_index " +
-                        " IN (" + CommonKeys.DELIVERED_EMAILS_INDEX + "," + CommonKeys.DELIVERED_EMAILS_DELIVERED_INDEX + ") THEN t.rate " +
-                        " ELSE (CASE WHEN (? <= 0) THEN -1 ELSE 1.0 * t.value / ? END) END) ")
-                .append(" WHERE t.mailing_id = ? AND t.category_index IN (").append(StringUtils.join(categoryIndex, ", ")).append(")");
+        String totalCountQuery = """
+                SELECT a.mailing_id, CASE WHEN (SUM(a.value) IS NULL OR SUM(a.value) = 0) THEN -1 ELSE SUM(a.value) END AS total
+                FROM %s a
+                WHERE a.mailing_id IN (%s) AND a.category_index IN (%s)
+                GROUP BY a.mailing_id
+                """.formatted(tableName, joinIds(mailingIds), joinIds(allCategoryIndex));
 
-        for (Map<String, Object> row : selectEmbedded(logger, totalCountQuery.toString())) {
-            updateEmbedded(logger, updateRateQuery.toString(), ((Number) row.get("total")).intValue(), ((Number) row.get("total")).intValue(), ((Number) row.get("mailing_id")).intValue());
+        String updateRateQuery = """
+                UPDATE %s t
+                SET t.rate_delivered = (CASE WHEN t.category_index IN (%d, %d) THEN t.rate ELSE (CASE WHEN (? <= 0) THEN -1 ELSE 1.0 * t.value / ? END) END)
+                WHERE t.mailing_id = ? AND t.category_index IN (%s)
+                """.formatted(tableName, CommonKeys.DELIVERED_EMAILS_INDEX, CommonKeys.DELIVERED_EMAILS_DELIVERED_INDEX, joinIds(categoryIndex));
+
+        for (Map<String, Object> row : selectEmbedded(totalCountQuery)) {
+            updateEmbedded(updateRateQuery, toInt(row.get("total")), toInt(row.get("total")), toInt(row.get("mailing_id")));
         }
     }
 
     @DaoUpdateReturnValueCheck
-    private void insertDeliveredIntoTempTable(int tempTableID, WorkflowMailingData data, int companyID, String targetSQL) throws Exception {
+    private void insertDeliveredIntoTempTable(int tempTableID, WorkflowMailingData data, int companyID, String targetSQL, String startDate, String endDate) throws Exception {
         int mailingId = data.getMailingId();
         if (successTableActivated(companyID) && hasSuccessTableData(companyID, mailingId)) {
-
             boolean isMailingNotExpired = isMailingNotExpired(mailingId);
-            int deliveredMails = selectNumberOfDeliveredMails(companyID, mailingId, CommonKeys.TYPE_ALL_SUBSCRIBERS, targetSQL, null, null);
+            int deliveredMails = selectNumberOfDeliveredMails(companyID, mailingId, CommonKeys.TYPE_ALL_SUBSCRIBERS, targetSQL, startDate, endDate);
             if (deliveredMails > 0 || isMailingNotExpired) {
-
                 insertIntoSummaryTempTable(tempTableID, CommonKeys.DELIVERED_EMAILS_DELIVERED, CommonKeys.DELIVERED_EMAILS_DELIVERED_INDEX,
                         mailingId, deliveredMails, data.getOrder());
             }
         } else if (isMailingNotExpired(mailingId)) {
-            final boolean isActivated = isMailingTrackingActivated(companyID);
-
             int value;
-            if (data.getTargetGroupId() != CommonKeys.ALL_SUBSCRIBERS_TARGETGROUPID && !isActivated) {
+            if (data.getTargetGroupId() != CommonKeys.ALL_SUBSCRIBERS_TARGETGROUPID && !isMailingTrackingActivated(companyID)) {
                 value = 0;
             } else {
-                String queryBuilder = "SELECT " +
-                        " SUM(CASE WHEN (category_index = " + CommonKeys.DELIVERED_EMAILS_INDEX + ") THEN value ELSE 0 END)" +
-                        " -" +
-                        " SUM(CASE WHEN (category_index = " + CommonKeys.HARD_BOUNCES_INDEX + ") THEN value ELSE 0 END) AS value" +
-                        " FROM " + "tmp_report_aggregation_" + tempTableID + "_tbl" +
-                        " WHERE mailing_id =? AND category_index IN (" + CommonKeys.DELIVERED_EMAILS_INDEX + ", " + CommonKeys.HARD_BOUNCES_INDEX + ")" +
-                        " GROUP BY mailing_id";
+                String queryBuilder = """
+                        SELECT SUM(CASE WHEN (category_index = %d) THEN value ELSE 0 END) -
+                               SUM(CASE WHEN (category_index = %d) THEN value ELSE 0 END) AS value
+                        FROM %s
+                        WHERE mailing_id = ? AND category_index IN (%d, %d)
+                        GROUP BY mailing_id
+                        """.formatted(CommonKeys.DELIVERED_EMAILS_INDEX, CommonKeys.HARD_BOUNCES_INDEX, getTemporaryTableName(tempTableID), CommonKeys.DELIVERED_EMAILS_INDEX, CommonKeys.HARD_BOUNCES_INDEX);
 
-                value = selectEmbeddedInt(logger, queryBuilder, mailingId);
-
+                value = selectEmbeddedInt(queryBuilder, mailingId);
             }
 
             insertIntoSummaryTempTable(tempTableID, CommonKeys.REVENUE, CommonKeys.REVENUE_INDEX,
@@ -375,9 +353,9 @@ public class WorkflowDataSet extends TotalOptimizationDataSet {
     }
 
     @DaoUpdateReturnValueCheck
-    private void insertRevenueIntoTempTable(int tempTableID, WorkflowMailingData data, int companyID, String targetSQL) throws Exception {
-        if (DbUtilities.checkIfTableExists(getDataSource(), "rdirlog_" + companyID + "_val_num_tbl")) {
-            double revenue = selectRevenue(companyID, data.getMailingId(), targetSQL, null, null);
+    private void insertRevenueIntoTempTable(int tempTableID, WorkflowMailingData data, int companyID, String targetSQL, String startDate, String endDate) throws Exception {
+        if (DbUtilities.checkIfTableExists(getDataSource(), "rdirlog_%d_val_num_tbl".formatted(companyID))) {
+            double revenue = selectRevenue(companyID, data.getMailingId(), targetSQL, startDate, endDate);
 
             insertIntoSummaryTempTable(tempTableID, CommonKeys.REVENUE, CommonKeys.REVENUE_INDEX,
                     data.getMailingId(), (int) (100 * revenue), data.getOrder());
@@ -385,16 +363,16 @@ public class WorkflowDataSet extends TotalOptimizationDataSet {
     }
 
     @DaoUpdateReturnValueCheck
-    private void insertOptOutsIntoTempTable(int tempTableID, WorkflowMailingData data, int companyID, String targetSQL) throws Exception {
+    private void insertOptOutsIntoTempTable(int tempTableID, WorkflowMailingData data, int companyID, String targetSQL, String startDate, String endDate) throws Exception {
         int mailingId = data.getMailingId();
-        int optouts = selectOptOuts(companyID, mailingId, targetSQL, CommonKeys.TYPE_ALL_SUBSCRIBERS, null, null);
+        int optouts = selectOptOuts(companyID, mailingId, targetSQL, CommonKeys.TYPE_ALL_SUBSCRIBERS, startDate, endDate);
 
         insertIntoSummaryTempTable(tempTableID, CommonKeys.OPT_OUTS, CommonKeys.OPT_OUTS_INDEX,
                 mailingId, optouts, data.getOrder());
     }
 
     @DaoUpdateReturnValueCheck
-    private void insertSoftbouncesUndeliverable(int tempTableID, WorkflowMailingData data, int companyID, boolean showSoftbounces) throws Exception {
+    private void insertSoftbouncesUndeliverable(int tempTableID, WorkflowMailingData data, int companyID, boolean showSoftbounces, String startDate, String endDate) throws Exception {
         if (!successTableActivated(companyID) || !showSoftbounces) {
             return;
         }
@@ -402,7 +380,7 @@ public class WorkflowDataSet extends TotalOptimizationDataSet {
 
         LightMailing mailing = new LightMailingDaoImpl(getDataSource()).getMailing(mailingId, companyID);
         if (mailing != null && mailing.getMailingType() == MailingType.NORMAL.getCode()) {
-            int deliveredMails = selectNumberOfDeliveredMails(companyID, mailingId, CommonKeys.TYPE_ALL_SUBSCRIBERS, null, null, null);
+            int deliveredMails = selectNumberOfDeliveredMails(companyID, mailingId, CommonKeys.TYPE_ALL_SUBSCRIBERS, null, startDate, endDate);
 
             int sentMails = getTempTableValuesByCategoryAndMailingId(tempTableID, CommonKeys.DELIVERED_EMAILS, mailingId);
             int hardBounces = getTempTableValuesByCategoryAndMailingId(tempTableID, CommonKeys.HARD_BOUNCES, mailingId);
@@ -416,25 +394,27 @@ public class WorkflowDataSet extends TotalOptimizationDataSet {
     }
 
     private int getTempTableValuesByCategoryAndMailingId(int tempTableID, String category, int mailingId) throws Exception {
-        String query = "SELECT value FROM tmp_report_aggregation_" + tempTableID + "_tbl WHERE category = ? AND mailing_id = ?";
-        int value;
         try {
-            value = selectEmbedded(logger, query, Integer.class, category, mailingId);
+            return selectEmbedded(
+                    "SELECT value FROM %s WHERE category = ? AND mailing_id = ?".formatted(getTemporaryTableName(tempTableID)),
+                    Integer.class,
+                    category,
+                    mailingId
+            );
         } catch (EmptyResultDataAccessException e) {
-            logger.error("No data found for category: " + category + ", mailingId: " + mailingId);
-            value = 0;
+            logger.error("No data found for category: {}, mailingId: {}", category, mailingId);
+            return 0;
         }
-        return value;
     }
 
     @DaoUpdateReturnValueCheck
-    private void insertBouncesIntoTempTable(int tempTableID, WorkflowMailingData data, int companyID, String targetSQL) throws Exception {
+    private void insertBouncesIntoTempTable(int tempTableID, WorkflowMailingData data, int companyID, String targetSQL, String startDate, String endDate) throws Exception {
         int mailingId = data.getMailingId();
         int hardbounces;
         if (!isMailingBouncesExpire(companyID, mailingId) || !isOracleDB()) {
-            hardbounces = selectHardbouncesFromBounces(companyID, mailingId, targetSQL, CommonKeys.TYPE_ALL_SUBSCRIBERS, null, null);
+            hardbounces = selectHardbouncesFromBounces(companyID, mailingId, targetSQL, CommonKeys.TYPE_ALL_SUBSCRIBERS, startDate, endDate);
         } else {
-            hardbounces = selectHardbouncesFromBindings(companyID, mailingId, targetSQL, CommonKeys.TYPE_ALL_SUBSCRIBERS, null, null);
+            hardbounces = selectHardbouncesFromBindings(companyID, mailingId, targetSQL, CommonKeys.TYPE_ALL_SUBSCRIBERS, startDate, endDate);
         }
 
         insertIntoSummaryTempTable(tempTableID, CommonKeys.HARD_BOUNCES, CommonKeys.HARD_BOUNCES_INDEX,
@@ -442,43 +422,45 @@ public class WorkflowDataSet extends TotalOptimizationDataSet {
     }
 
     @DaoUpdateReturnValueCheck
-    private void insertOpenedAnonymousIntoTempTable(int tempTableID, WorkflowMailingData data, int companyID) throws Exception {
-        int anonymousOpenings = selectAnonymousOpenings(companyID, data.getMailingId(), null, null);
+    private void insertOpenedAnonymousIntoTempTable(int tempTableID, WorkflowMailingData data, int companyID, String startDate, String endDate) throws Exception {
+        int anonymousOpenings = selectAnonymousOpenings(companyID, data.getMailingId(), startDate, endDate);
 
         insertIntoSummaryTempTable(tempTableID, CommonKeys.OPENINGS_ANONYMOUS, CommonKeys.OPENINGS_ANONYMOUS_INDEX,
                 data.getMailingId(), anonymousOpenings, data.getOrder());
     }
 
     @DaoUpdateReturnValueCheck
-    private void insertOpenedGrossIntoTempTable(int tempTableID, WorkflowMailingData data, int companyID, String targetSQL) throws Exception {
-        int openings = selectOpenings(companyID, data.getMailingId(), null, targetSQL, null, null);
+    private void insertOpenedGrossIntoTempTable(int tempTableID, WorkflowMailingData data, int companyID, String targetSQL, String startDate, String endDate) throws Exception {
+        int openings = selectOpenings(companyID, data.getMailingId(), null, targetSQL, startDate, endDate);
 
         insertIntoSummaryTempTable(tempTableID, CommonKeys.OPENINGS_GROSS_MEASURED, CommonKeys.OPENINGS_GROSS_MEASURED_INDEX,
                 data.getMailingId(), openings, data.getOrder());
     }
 
     @DaoUpdateReturnValueCheck
-    private void insertOpenedInvisibleIntoTempTable(int tempTableID, WorkflowMailingData data, int companyID, String targetSQL) throws Exception {
+    private void insertOpenedInvisibleIntoTempTable(int tempTableID, WorkflowMailingData data, int companyID, String targetSQL, String startDate, String endDate) throws Exception {
         int mailingId = data.getMailingId();
-        int measuredOpeners = selectEmbeddedInt(logger,
-                "SELECT value FROM tmp_report_aggregation_" + tempTableID + "_tbl WHERE category_index = ? AND mailing_id = ?",
-                CommonKeys.OPENERS_MEASURED_INDEX, mailingId);
+        int measuredOpeners = selectEmbeddedInt(
+                "SELECT value FROM %s WHERE category_index = ? AND mailing_id = ?".formatted(getTemporaryTableName(tempTableID)),
+                CommonKeys.OPENERS_MEASURED_INDEX,
+                mailingId
+        );
         boolean isAllRecipientGroup = StringUtils.isBlank(targetSQL) || targetSQL.replace(" ", "").equals("1=1");
 
-        int openingClickers = selectOpeningClickers(companyID, mailingId, CommonKeys.TYPE_ALL_SUBSCRIBERS, targetSQL, null, null);
-        int nonOpeningClickers = selectNonOpeningClickers(companyID, mailingId, CommonKeys.TYPE_ALL_SUBSCRIBERS, targetSQL, null, null);
+        int openingClickers = selectOpeningClickers(companyID, mailingId, CommonKeys.TYPE_ALL_SUBSCRIBERS, targetSQL, startDate, endDate);
+        int nonOpeningClickers = selectNonOpeningClickers(companyID, mailingId, CommonKeys.TYPE_ALL_SUBSCRIBERS, targetSQL, startDate, endDate);
         int maximumOverallOpeners;
         if (successTableActivated(companyID) && isMailingNotExpired(mailingId)) {
-            maximumOverallOpeners = selectNumberOfDeliveredMails(companyID, mailingId, CommonKeys.TYPE_ALL_SUBSCRIBERS, targetSQL, null, null);
+            maximumOverallOpeners = selectNumberOfDeliveredMails(companyID, mailingId, CommonKeys.TYPE_ALL_SUBSCRIBERS, targetSQL, startDate, endDate);
         } else if (isAllRecipientGroup) {
             if (isMailingNotExpired(mailingId)) {
                 // this calculation only works for the "all_recipients" target
-                int mailsSent = getNumberSentMailings(companyID, mailingId, CommonKeys.TYPE_WORLDMAILING, null, null, null);
-                int hardbounces = selectHardbouncesFromBounces(companyID, mailingId, null, CommonKeys.TYPE_ALL_SUBSCRIBERS, null, null);
+                int mailsSent = getNumberSentMailings(companyID, mailingId, CommonKeys.TYPE_WORLDMAILING, null, startDate, endDate);
+                int hardbounces = selectHardbouncesFromBounces(companyID, mailingId, null, CommonKeys.TYPE_ALL_SUBSCRIBERS, startDate, endDate);
                 maximumOverallOpeners = mailsSent - hardbounces;
             } else {
                 // this calculation only works for the "all_recipients" target
-                maximumOverallOpeners = getNumberSentMailings(companyID, mailingId, CommonKeys.TYPE_WORLDMAILING, null, null, null);
+                maximumOverallOpeners = getNumberSentMailings(companyID, mailingId, CommonKeys.TYPE_WORLDMAILING, null, startDate, endDate);
             }
         } else {
             maximumOverallOpeners = 0;
@@ -499,20 +481,26 @@ public class WorkflowDataSet extends TotalOptimizationDataSet {
         insertIntoSummaryTempTable(tempTableID, CommonKeys.OPENERS_INVISIBLE, CommonKeys.OPENERS_INVISIBLE_INDEX,
                 mailingId, invisibleOpeners, data.getOrder());
 
-        insertIntoSummaryTempTable(tempTableID, CommonKeys.OPENERS_TOTAL, CommonKeys.OPENERS_TOTAL_INDEX,
-                mailingId, measuredOpeners + invisibleOpeners, data.getOrder());
+        insertIntoSummaryTempTable(tempTableID, CommonKeys.OPENERS_TOTAL, CommonKeys.OPENERS_TOTAL_INDEX, mailingId,
+                measuredOpeners + invisibleOpeners, data.getOrder());
     }
 
-    private void insertOpenersIntoTempTable(int tempTableID, WorkflowMailingData data, int companyID, String targetSQL) throws Exception {
+    private void insertOpenersIntoTempTable(int tempTableID, WorkflowMailingData data, int companyID, String targetSQL, String startDate, String endDate) throws Exception {
         int mailingId = data.getMailingId();
-        int totalOpeners = selectOpeners(companyID, mailingId, CommonKeys.TYPE_ALL_SUBSCRIBERS, targetSQL, null, null, null);
+        int totalOpeners = selectOpeners(companyID, mailingId, CommonKeys.TYPE_ALL_SUBSCRIBERS, targetSQL, startDate, endDate, null);
 
         insertIntoSummaryTempTable(tempTableID, CommonKeys.OPENERS_MEASURED, CommonKeys.OPENERS_MEASURED_INDEX,
                 mailingId, totalOpeners, data.getOrder());
 
         // If a customer is within one of theses deviceclasses he hasn't opened the mail with any other deviceclass.
-        Map<DeviceClass, Integer> openersByDevice =
-                selectOpenersByDeviceClassWithoutCombinations(companyID, mailingId, CommonKeys.TYPE_ALL_SUBSCRIBERS, targetSQL, null, null);
+        Map<DeviceClass, Integer> openersByDevice = selectOpenersByDeviceClassWithoutCombinations(
+                companyID,
+                mailingId,
+                CommonKeys.TYPE_ALL_SUBSCRIBERS,
+                targetSQL,
+                startDate,
+                endDate
+        );
 
         // Calculating the openers which used more than one deviceclass for link-opens
         int openersWithDeviceClassCombinations = totalOpeners;
@@ -541,8 +529,8 @@ public class WorkflowDataSet extends TotalOptimizationDataSet {
     }
 
     @DaoUpdateReturnValueCheck
-    private void insertClicksAnonymousIntoTempTable(int tempTableID, WorkflowMailingData data, int companyID) throws Exception {
-        int anonymousClicks = selectAnonymousClicks(companyID, data.getMailingId(), null, null);
+    private void insertClicksAnonymousIntoTempTable(int tempTableID, WorkflowMailingData data, int companyID, String startDate, String endDate) throws Exception {
+        int anonymousClicks = selectAnonymousClicks(companyID, data.getMailingId(), startDate, endDate);
 
         insertIntoSummaryTempTable(tempTableID, CommonKeys.CLICKS_ANONYMOUS, CommonKeys.CLICKS_ANONYMOUS_INDEX,
                 data.getMailingId(), anonymousClicks, data.getOrder());
@@ -565,9 +553,12 @@ public class WorkflowDataSet extends TotalOptimizationDataSet {
     }
 
     @DaoUpdateReturnValueCheck
-    public int insertSendIntoTempTable(int tempTableID, WorkflowMailingData data, int companyID, String targetSql) throws Exception {
-        String recipientsType = data.getTargetGroupId() == ALL_SUBSCRIBERS_TARGETGROUPID ? CommonKeys.TYPE_WORLDMAILING : CommonKeys.TYPE_ALL_SUBSCRIBERS;
-        int mailsSent = getNumberSentMailings(companyID, data.getMailingId(), recipientsType, targetSql, null, null);
+    public int insertSendIntoTempTable(int tempTableID, WorkflowMailingData data, int companyID, String targetSql, String startDate, String endDate) throws Exception {
+        String recipientsType = data.getTargetGroupId() == ALL_SUBSCRIBERS_TARGETGROUPID
+                ? CommonKeys.TYPE_WORLDMAILING
+                : CommonKeys.TYPE_ALL_SUBSCRIBERS;
+
+        int mailsSent = getNumberSentMailings(companyID, data.getMailingId(), recipientsType, targetSql, startDate, endDate);
 
         insertIntoSummaryTempTable(tempTableID, CommonKeys.DELIVERED_EMAILS, CommonKeys.DELIVERED_EMAILS_INDEX,
                 data.getMailingId(), mailsSent, data.getOrder());
@@ -576,22 +567,23 @@ public class WorkflowDataSet extends TotalOptimizationDataSet {
     }
 
     @DaoUpdateReturnValueCheck
-    public void insertClickersIntoTempTable(int tempTableID, WorkflowMailingData data, int companyID, String targetSql, String recipientsType) throws Exception {
+    public void insertClickersIntoTempTable(int tempTableID, WorkflowMailingData data, int companyID, String targetSql, String recipientsType, String startDate, String endDate) throws Exception {
         int mailingId = data.getMailingId();
-        int totalClicks = selectClicks(companyID, mailingId, recipientsType, targetSql, null, null);
-        int totalClickers = selectClickers(companyID, mailingId, recipientsType, targetSql, null, null);
+        int totalClicks = selectClicks(companyID, mailingId, recipientsType, targetSql, startDate, endDate);
+        int totalClickers = selectClickers(companyID, mailingId, recipientsType, targetSql, startDate, endDate);
 
-        insertIntoSummaryTempTable(tempTableID, CommonKeys.CLICKER, CommonKeys.CLICKER_INDEX,
-                mailingId,
-                totalClickers, data.getOrder());
-
-        insertIntoSummaryTempTable(tempTableID, CommonKeys.CLICKS_GROSS, CommonKeys.CLICKS_GROSS_INDEX,
-                mailingId,
-                totalClicks, data.getOrder());
+        insertIntoSummaryTempTable(tempTableID, CommonKeys.CLICKER, CommonKeys.CLICKER_INDEX, mailingId, totalClickers, data.getOrder());
+        insertIntoSummaryTempTable(tempTableID, CommonKeys.CLICKS_GROSS, CommonKeys.CLICKS_GROSS_INDEX, mailingId, totalClicks, data.getOrder());
 
         // If a customer is within one of theses deviceclasses he hasn't clicked in the mail with any other deviceclass.
-        Map<DeviceClass, Integer> clickersByDevices =
-                selectClickersByDeviceClassWithoutCombinations(companyID, mailingId, recipientsType, targetSql, null, null);
+        Map<DeviceClass, Integer> clickersByDevices = selectClickersByDeviceClassWithoutCombinations(
+                companyID,
+                mailingId,
+                recipientsType,
+                targetSql,
+                startDate,
+                endDate
+        );
 
         // Calculating the clickers which used more than one deviceclass for link-clicks
         int unknownDevicesClickers = totalClickers;
@@ -621,60 +613,72 @@ public class WorkflowDataSet extends TotalOptimizationDataSet {
     @Override
     public int createSummaryTempTable() throws Exception {
         int tempTableID = getNextTmpID();
-        String createTable = "CREATE TABLE tmp_report_aggregation_" + tempTableID + "_tbl" +
-                " (" +
-                "category VARCHAR(200)" +
-                ", category_index INTEGER" +
-                ", mailing_id INTEGER" +
-                ", sort_order INTEGER" +
-                ", value INTEGER" +
-                ", rate DOUBLE" +
-                ", rate_delivered DOUBLE" +
-                ")";
-        updateEmbedded(logger, createTable);
+        updateEmbedded("""
+                CREATE TABLE %s
+                (
+                    category       VARCHAR(200),
+                    category_index INTEGER,
+                    mailing_id     INTEGER,
+                    sort_order     INTEGER,
+                    value          INTEGER,
+                    rate           DOUBLE,
+                    rate_delivered DOUBLE
+                )
+                """.formatted(getTemporaryTableName(tempTableID)));
         return tempTableID;
     }
 
     @Override
     public int createTempTable() throws Exception {
         int tempTableID = getNextTmpID();
-        String createTable = "CREATE TABLE tmp_report_aggregation_" + tempTableID + "_tbl" +
-                " (" +
-                "  mailing_id INTEGER" +
-                ", mailing_name VARCHAR(200)" +
-                ", mailing_subject VARCHAR(200)" +
-                ", sort_order INTEGER" +
-                ", target_group_id INTEGER" +
-                ", target_group_name VARCHAR(200)" +
-                ", avg_mailing_size DOUBLE" +
-                ")";
-        updateEmbedded(logger, createTable);
+        updateEmbedded("""
+                CREATE TABLE %s
+                (
+                    mailing_id        INTEGER,
+                    mailing_name      VARCHAR(200),
+                    mailing_subject   VARCHAR(200),
+                    sort_order        INTEGER,
+                    target_group_id   INTEGER,
+                    target_group_name VARCHAR(200),
+                    avg_mailing_size  DOUBLE
+                )
+                """.formatted(getTemporaryTableName(tempTableID)));
         return tempTableID;
     }
 
     private void insertIntoSummaryTempTable(int tempTableID, String category, int categoryIndex, int mailingId, int value, int order) throws Exception {
-        String insertSql = "INSERT INTO tmp_report_aggregation_" + tempTableID + "_tbl " +
-                "(category, category_index, mailing_id, sort_order, value, rate) VALUES (?, ?, ?, ?, ?, 0)";
-        updateEmbedded(logger, insertSql, category, categoryIndex, mailingId, order, value);
+        String insertSql = "INSERT INTO %s (category, category_index, mailing_id, sort_order, value, rate) VALUES (?, ?, ?, ?, ?, 0)"
+                .formatted(getTemporaryTableName(tempTableID));
+        updateEmbedded(insertSql, category, categoryIndex, mailingId, order, value);
     }
 
     private void insertTotalValueByCategories(int tempTableID, List<Integer> mailingIds) throws Exception {
-        String insertSql = "INSERT INTO tmp_report_aggregation_" + tempTableID + "_tbl " +
-                "(category, category_index, mailing_id, sort_order, value, rate) " +
-                " SELECT a.category, a.category_index, 0, -1, CASE WHEN (SUM(a.value) IS NULL OR SUM(a.value) = 0) THEN 0 ELSE SUM(a.value) END AS total, 0" +
-                " FROM tmp_report_aggregation_" + tempTableID + "_tbl a WHERE a.mailing_id IN (" + StringUtils.join(mailingIds, ", ") + ")" +
-                " GROUP BY a.category, a.category_index";
+        String tableName = getTemporaryTableName(tempTableID);
 
-        updateEmbedded(logger, insertSql);
+        updateEmbedded("""
+                INSERT INTO %s (category, category_index, mailing_id, sort_order, value, rate)
+                SELECT a.category, a.category_index, 0, -1, CASE WHEN (SUM(a.value) IS NULL OR SUM(a.value) = 0) THEN 0 ELSE SUM(a.value) END AS total, 0
+                FROM %s a
+                WHERE a.mailing_id IN (%s)
+                GROUP BY a.category, a.category_index
+                """.formatted(tableName, tableName, joinIds(mailingIds)));
     }
 
     private void insertWorkflowMailingData(int tempTableID, WorkflowMailingData mailing) throws Exception {
-        String insertSql = "INSERT INTO tmp_report_aggregation_" + tempTableID + "_tbl " +
-                "(mailing_id, mailing_name, mailing_subject, sort_order, " +
-                "target_group_id, target_group_name, avg_mailing_size) VALUES (?, ?, ?, ?, ?, ?, ?)";
-        updateEmbedded(logger, insertSql, mailing.getMailingId(), mailing.getMailingName(), mailing.getMailingSubject(),
-                mailing.getOrder(), mailing.getTargetGroupId(), mailing.getTargetGroupName(),
-                mailing.getAvgMailSize());
+        String insertSql = """
+                INSERT INTO %s (mailing_id, mailing_name, mailing_subject, sort_order, target_group_id, target_group_name, avg_mailing_size)
+                VALUES (?, ?, ?, ?, ?, ?, ?)
+                """.formatted(getTemporaryTableName(tempTableID));
+        updateEmbedded(insertSql, mailing.getMailingId(), mailing.getMailingName(), mailing.getMailingSubject(),
+                mailing.getOrder(), mailing.getTargetGroupId(), mailing.getTargetGroupName(), mailing.getAvgMailSize());
+    }
+
+    private String joinIds(Collection<Integer> ids) {
+        return StringUtils.join(ids, ", ");
+    }
+
+    private String joinIds(Integer... ids) {
+        return StringUtils.join(ids, ", ");
     }
 
     public static class WorkflowMailingSummaryRow extends MailingSummaryRow {
