@@ -1,6 +1,6 @@
 /*
 
-    Copyright (C) 2022 AGNITAS AG (https://www.agnitas.org)
+    Copyright (C) 2025 AGNITAS AG (https://www.agnitas.org)
 
     This program is free software: you can redistribute it and/or modify it under the terms of the GNU Affero General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
     This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License for more details.
@@ -10,14 +10,13 @@
 
 package com.agnitas.taglib.message;
 
+import java.util.Collections;
+import java.util.List;
+
 import com.agnitas.messages.Message;
 import com.agnitas.web.mvc.impl.PopupsImpl;
 import jakarta.servlet.jsp.PageContext;
 import org.apache.commons.collections4.CollectionUtils;
-
-import java.util.Collections;
-import java.util.List;
-import java.util.stream.Collectors;
 
 public interface PopupMessageTag {
 
@@ -32,6 +31,6 @@ public interface PopupMessageTag {
         return messages.stream()
                 .filter(m -> messageType.equals(m.getType()))
                 .map(PopupsImpl.MessagePopup::getMessage)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
